--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ol>
       <li>
         Project 1
+            <a href="tour/index.html">Tour</a>
+
       </li>
       <li>
         Project 2 (coming soon!)
