--- a/tour/food1.html
+++ b/tour/food1.html
@@ -22,7 +22,7 @@
     </div>
     <div>
     </div>
-<img src="images/modifier_letter_down_arrowhead.svg"
+<img src="images/down-arrow.svg"
     height="40"
     width="100" 
     id="download"/>
