--- a/tour/download1.html
+++ b/tour/download1.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>uploading and downloading</title>
     <link rel="stylesheet" href="style.css">
 
@@ -10,19 +10,29 @@
   </head>
   <body>
 
-    <h1>what if instead of using the words <em>eating</em> and <em>pooping</em>, we used <em>uploading</em> and <em>downloading</em>. in this world, the terms we use for the web are also used in the everyday. for lunch i’m going to upload a chicken salad, yum.</h1>
-    <h2></h2>
+    <h1>downloading...</h1>
+    <h2>50%</h2>
     
     <br>
+      <video width="750" controls autoplay>
+
+  <source src="images/downloading-1.mp4" type="video/mp4">
+</video>
     <br>
     <br>
      <div>
      <!-- <img src="images/alexa-and-forest-small.png">-->
     </div>
     <div>
-    <p class="arrow">></p>
     </div>
-        <a href="food1.html">></a>
+ <div class="cta"> 
+      <p><a href="food2.html">upload</a></p>
+    </div>
+    </a>
+
+
+
+
 
     <footer>
       <div>
