--- a/tour/food1.html
+++ b/tour/food1.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>uploading and downloading</title>
     <link rel="stylesheet" href="style.css">
 
@@ -14,7 +14,10 @@
     <h2>50%</h2>
     
     <br>
+      <video width="750" controls autoplay>
 
+  <source src="images/uploading-1.mp4" type="video/mp4">
+</video>
     <br>
     <br>
      <div>
@@ -22,10 +25,9 @@
     </div>
     <div>
     </div>
-<img src="images/down-arrow.svg"
-    height="40"
-    width="100" 
-    id="download"/>
+ <div class="cta"> 
+      <p><a href="download1.html">download</a></p>
+    </div>
     </a>
 
 
