--- a/tour/index.html
+++ b/tour/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
 
-    <h1>what if instead of using the words <em>eating</em> and <em>pooping</em>, we used <em>uploading</em> and <em>downloading</em>. in this world, the terms we use for the web are also used in the everyday. for lunch i’m going to upload some enchiladas, yum.</h1>
+   <div class="container"> <h1>The body and mind are treated like machines, outputting tasks left and right—we have on/off switches with regards to work, sometimes these switches are out of our control. If what makes us human slips away, what are we left with? If we continue to slip towards the mechanical, what would that look like? <br><br>In this world <em>uploading</em> and <em>downloading</em> are used instead of <em>eating</em> and <em>shitting</em>. In this dystopia, the terms we use on the web are also used in the everyday. 
+</h1>
+</div>
     <h2></h2>
     
     <br>
@@ -21,7 +23,8 @@
     </div>
     <div>
 
-    <p class="arrow" ><a href="food1.html">&#708;</a></p>
+    <div class="cta"> 
+      <p><a href="food1.html">upload</a></p>
     </div>
 
     <footer>
