--- a/website as/index.html
+++ b/website as/index.html
@@ -15,10 +15,14 @@
     <br>
     <div>
 
+<div class="header"><b>CHAPTER II.</b><br></div>
+
 <div class="box">
-      <h4>CHAPTER II.</h4>
+
       <p>
-        <em> Of the Discovery of Yucatan, and the battle we fought there with the Natives. </em>
+
+
+<em> Of the Discovery of Yucatan, and the battle we fought there with the Natives. </em><br>
 <br>
 We sailed in the year 1517 from the harbour of Jaruco and left the Havannah. This harbour lies on the north coast of Cuba, and is so called by the natives. After twelve days' sail we had passed the coast of Saint Antonius, which in Cuba is called the country of the Guanatavies, a wild tribe of Indians. We now made for the wide ocean, steering continually towards the west, totally ignorant of the shoals and currents or of the winds which predominate in this latitude. Certainly most hazardous on our part, and indeed we were very soon visited by a terrible storm, which continued two days and two nights, in which the whole of us had nigh perished.
 <br>
