--- a/tour/index.html
+++ b/tour/index.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>uploading and downloading</title>
     <link rel="stylesheet" href="style.css">
 
@@ -22,11 +22,11 @@
      <!-- <img src="images/alexa-and-forest-small.png">-->
     </div>
     <div>
-
+<div class="buttoncontainer">
     <div class="cta"> 
       <p><a href="food1.html">upload</a></p>
     </div>
-
+</div>
     <footer>
       <div>
         <!--<a href="#top">Back to top</a>-->
