--- a/protocol/index.html
+++ b/protocol/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a dialogue between you and your things</title>
-    <link rel="stylesheet" href="style copy.css">
+    <link rel="stylesheet" href="style.css">
     <link rel='icon' href='images/favicon.ico' type='image/x-icon'>
 </head>
 <body>
