--- a/tour/download2.html
+++ b/tour/download2.html
@@ -11,7 +11,7 @@
   <body>
 
     <h1>downloading...</h1>
-    <h2>50%</h2>
+    <h2>  <img src="images/uploading-downloading-animation.gif"></h2>
     
     <br>
 
