--- a/tour/food2.html
+++ b/tour/food2.html
@@ -11,7 +11,7 @@
   <body>
 
     <h1>uploading...</h1>
-    <h2>50%</h2>
+    <h2>  <img src="images/uploading-downloading-animation.gif"></h2>
     
     <br>
       <video width="750" controls autoplay>
